Replace jQuery CDN protocol to HTTPS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="author" content="Roger Vera">
 	    <meta name="description" content="Find the perfect otter GIF">
 	    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
-		<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.2.min.js"></script>
+		<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.2.min.js"></script>
         <!--jQuery, linked from a CDN-->
 		<script src="script.js"></script>
 		<link href="normalize.css" rel="stylesheet">
