--- a/index.html
+++ b/index.html
@@ -6,25 +6,21 @@
 		<meta name="author" content="Roger Vera">
 	    <meta name="description" content="Find the perfect otter GIF">
 	    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
-		<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.2.min.js"></script>
         <!--jQuery, linked from a CDN-->
+		<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.2.min.js"></script>
 		<script src="./script.js"></script>
 		<link href="./normalize.css" rel="stylesheet">
 		<link href="./style.css" rel="stylesheet">
 	</head>
 
 	<body>
-		<header></header>
 		<div class="container">
 			<img class="image" alt="Avatar" src="https://s-media-cache-ak0.pinimg.com/736x/fe/52/5c/fe525c09d85b21c37531419d6531350e--drawing-reference-baby-otters.jpg">
-			<div class="overlay">
-				<div class="text">SQUEAK!</div>
-			</div>
 		</div>
-			<h1>I am Otter</h1>
+			<h1>Otter Gifs</h1>
 			<button id="search" onclick="fetchGif()">Get an otter</button>
 		<div class="container">
-			<section id="gif">
+			<section id="gifSection">
 			</section>
 		</div>
 	</body>
