--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 
         <!--jQuery, linked from a CDN-->
-		<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 		<!-- Main Script -->
 		<script src="./script.js"></script>
 
