--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <meta name="description" content="Find the perfect otter gif">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 
-  <!--jQuery, linked from a CDN-->
-	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 	<!-- Main Script -->
 	<script src="./script.js"></script>
 
@@ -17,23 +15,21 @@
 	with modern standards. -->
 	<link href="./normalize.css" rel="stylesheet">
 
-	<!-- My Style -->
+	<!-- My Custom Styling -->
 	<link href="./style.css" rel="stylesheet">
 </head>
 
 <body>
 	<div class="container">
 		<!-- Main image of otter -->
-		<img class="image" alt="Avatar" src="https://s-media-cache-ak0.pinimg.com/736x/fe/52/5c/fe525c09d85b21c37531419d6531350e--drawing-reference-baby-otters.jpg">
+		<img class="image" alt="Otter Avatar" src="https://s-media-cache-ak0.pinimg.com/736x/fe/52/5c/fe525c09d85b21c37531419d6531350e--drawing-reference-baby-otters.jpg">
 	</div>
 	<!-- Header -->
-	<h1>Otter Gifs</h1>
+	<h1>Otters Galore</h1>
 	<!-- Button used for search -->
-	<button id="search" onclick="fetchGif()">Get an otter</button>
+	<button id="search">Give me an otter!</button>
 	<!-- Section where GIF will be displayed -->
-	<div class="container">
-		<section id="gifSection">
-		</section>
+	<div class="container" id="gifSection">
 	</div>
 </body>
 </html>
